--- a/mysite/templates/registration/login.html
+++ b/mysite/templates/registration/login.html
@@ -27,7 +27,7 @@
         <td>{{ form.password }}</td>
       </tr>
     </table>
-    <input type="submit" value="login" />
+    <input id="submit_login" type="submit" value="login" />
     <input type="hidden" name="next" value="{{ next }}" />
   </form>
 
